<resources>
    <string name="app_name">Gullakh</string>
    <string name="spinner_title">Select Category</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_icon_splash_screens">&#xe82c;</string>
    <string name="drawer_icon_progress_bars">&#xe84c;</string>
    <string name="drawer_icon_shape_image_views">&#xe82b;</string>
    <string name="drawer_icon_text_views">&#xe852;</string>
    <string name="drawer_icon_search_bars">&#xe84f;</string>
    <string name="drawer_icon_login_page">&#xe842;</string>
    <string name="drawer_icon_image_gallery">&#xe83c;</string>
    <string name="drawer_icon_check_and_radio_buttons">&#xe833;</string>
    <string name="drawer_icon_left_menus">&#xe83f;</string>
    <string name="drawer_icon_list_views">&#xe841;</string>
    <string name="drawer_icon_parallax">&#xe846;</string>
    <string name="drawer_icon_linked_in">&#xe80e;</string>
    <string name="drawer_icon_blog">&#xe81e;</string>
    <string name="drawer_icon_git_hub">&#xe808;</string>
    <string name="drawer_icon_instagram">&#xe80c;</string>
    <string name="drawer_title_splash_screens">Splash Screens</string>
    <string name="drawer_title_progress_bars">Progress Bars</string>
    <string name="drawer_title_shape_image_views">Privacy Policy</string>
    <string name="Share_This_App">Share This App</string>
    <string name="drawer_title_logout">Log Out</string>
    <string name="drawer_title_terms_of_use">Terms of Use</string>
    <string name="drawer_title_my_application">My Application</string>
    <string name="drawer_title_text_views">Text Views</string>
    <string name="drawer_title_search_bars">Search Bars</string>
    <string name="drawer_title_login_page">Personal Loan</string>
    <string name="drawer_title_image_gallery">Car Loan</string>
    <string name="drawer_title_check_and_radio_buttons">Check Boxes</string>
    <string name="drawer_title_left_menus">My Searches</string>
    <string name="drawer_title_list_views">Home</string>
    <string name="drawer_title_parallax">My Profile</string>
    <string name="drawer_title_linked_in">LinkedIn</string>
    <string name="drawer_title_blog">Blog</string>
    <string name="drawer_title_git_hub">GitHub</string>
    <string name="drawer_title_instagram">Instagram</string>
    <string name="confirm_exit">Press Back button again to exit</string>
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_bookmark">&#xe921;</string>
    <string name="material_icon_bike">&#xe915;</string>
    <string name="material_icon_box_full">&#xe86b;</string>
    <string name="material_icon_clock">&#xe881;</string>
    <string name="material_icon_check">&#xe867;</string>
    <string name="material_icon_checked_full">&#xe86f;</string>
    <string name="material_icon_check_empty">&#xe86a;</string>
    <string name="material_icon_check_full">&#xe86e;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_cart">&#xe857;</string>
    <string name="material_icon_chevron_down">&#xe874;</string>
    <string name="material_icon_chevron_up">&#xe877;</string>
    <string name="material_icon_date">&#xe848;</string>
    <string name="material_icon_drink">&#xea08;</string>
    <string name="material_icon_dollar">&#xe892;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_eat">&#xeac6;</string>
    <string name="material_icon_friends">&#xe8d5;</string>
    <string name="material_icon_flag">&#xe96a;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_go">&#xe9be;</string>
    <string name="material_icon_home_variant">&#xe9bd;</string>
    <string name="material_icon_home">&#xe9be;</string>
    <string name="material_icon_hotels">&#xeae3;</string>
    <string name="material_icon_heart_outline">&#xe9b3;</string>
    <string name="material_icon_headphones">&#xe9b1;</string>
    <string name="material_icon_human">&#xe9c5;</string>
    <string name="material_icon_headline">&#xeb40;</string>
    <string name="material_icon_image_box">&#xe952;</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_line_spacing">&#xe988;</string>
    <string name="material_icon_note">&#xea23;</string>
    <string name="material_icon_message">&#xea12;</string>
    <string name="material_icon_play">&#xe831;</string>
    <string name="material_icon_play_single">&#xea7d;</string>
    <string name="material_icon_play_square">&#xea7a;</string>
    <string name="material_icon_play_circle">&#xea7b;</string>
    <string name="material_icon_play_outline">&#xea7b;</string>
    <string name="material_icon_pig">&#xea72;</string>
    <string name="material_icon_password">&#xe9fa;</string>
    <string name="material_icon_plus_box">&#xea7f;</string>
    <string name="material_icon_party">&#xe937;</string>
    <string name="material_icon_star_outline">&#xeade;</string>
    <string name="material_icon_star">&#xeadf;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="material_icon_skip_next">&#xeaca;</string>
    <string name="material_icon_skip_previous">&#xeacb;</string>
    <string name="material_icon_soundcloud">&#xead3;</string>
    <string name="material_icon_statistics">&#xea87;</string>
    <string name="material_icon_shop">&#xe858;</string>
    <string name="material_icon_sleep">&#xe9c2;</string>
    <string name="material_icon_settings">&#xeabe;</string>
    <string name="material_icon_state">&#xeb62;</string>
    <string name="material_icon_to_left">&#xe876;</string>
    <string name="material_icon_video">&#xeb39;</string>
    <string name="material_icon_undo">&#xeb2c;</string>
    <string name="material_icon_unfold_more">&#xeb2f;</string>
    <string name="fontello_logo">&#xe802;</string>
    <string name="fontello_search">&#xe816;</string>
    <string name="fontello_x_mark">&#xe81f;</string>
    <string name="fontello_x_mark_masked">&#xe806;</string>
    <string name="fontello_microfon">&#xe80f;</string>
    <string name="fontello_user">&#xe81b;</string>
    <string name="fontello_password">&#xe823;</string>
    <string name="fontello_upload">&#xe81a;</string>
    <string name="fontello_play">&#xe813;</string>
    <string name="fontello_heart_empty">&#xe80b;</string>
    <string name="fontello_heart_full">&#xe80a;</string>
    <string name="fontello_drag_and_drop">&#xe821;</string>
    <string name="title_activity_launch_page">LaunchPage</string>
    <string name="wellcome">Welcome \nto \nGullakh.com</string>
    <string-array name="accordion_sections">
        <item>Section A</item>
        <item>Section B</item>
        <item>Section C</item>
        <item>Section D</item>
        <item>Section E</item>
    </string-array>
    <string name="title_activity_questionier1">Questionier1</string>
    <string name="title_activity_questionier2">Questionier2</string>
    <string name="title_activity_questionier3">questionier3</string>
    <string name="title_activity_cartypes__questn">Cartypes_Questn</string>
    <string name="title_activity_choose__car__questn">Choose_Car_Questn</string>
    <string name="title_activity_your__comp__questn">Your_Comp_Questn</string>
    <string name="title_activity_net__salry__qutsn">Net_Salry_Qutsn</string>
    <string name="title_activity_emp_type__qustn">Emp_type_Qustn</string>
    <string name="title_activity_self_business_type__questn">SelfBusiness_type_Questn</string>
    <string name="title_activity_self__business__start_date">Self_Business_StartDate</string>
    <string name="title_activity_self__business__professn">Self_Business_Professn</string>
    <string name="title_activity_self__business__anual_turn_over">Self_Business_AnualTurnOver
    </string>
    <string name="title_activity_self__business__emipaid">Self_Business_EMIpaid</string>
    <string name="title_activity_salaryed__net_salary">Salaryed_NetSalary</string>
    <string name="title_activity_salaried__credited__bank">Salaried_Credited_Bank</string>
    <string name="title_activity_salaried__emi__paid">Salaried_EMI_Paid</string>
    <string name="title_activity_self_bussiness_man__buss_typ">SelfBussinessMan_BussTyp</string>
    <string name="title_activity_employer_nam__qustn">EmployerNam_Qustn</string>
    <string name="title_activity_working_year__employer">WorkingYear_Employer</string>
    <string name="title_activity_total__work_year__qustn">Total_WorkYear_Qustn</string>
    <string name="title_activity_current_city__residing_years">CurrentCity_Residing_years</string>
    <string name="title_activity_current__residence__questn">Current_Residence_Questn</string>
    <string name="title_activity_your__info_final__questn">Your_InfoFinal_Questn</string>
    <string name="title_activity_emi_questn">EMI_questn</string>
    <string name="title_activity_date_of_birth_questn">DateOfBirth_questn</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_signin">signin</string>
    <string-array name="sortby">
        
        <item>Best Rate</item>
        <item>Processing Fee</item>
        <item>Preclosure Fee</item>

    </string-array>
    <string name="sortybylabel">Sort By</string>
    <string name="title_activity_car__loan__pat">Car_Loan_PAT</string>
    <string name="title_activity_car_loan__depreciation">CarLoan_Depreciation</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="title_activity_myapplication">Myapplication</string>
    <string name="thankyoufrongullakh">Thank you for your request...!!!\nWe shall be in touch with you soon, to collect the documents.</string>
    <string name="title_activity_edit_co_appli__home_loan">EditCoAppli_HomeLoan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">588436571304022</string>
    <string name="title_activity_coappldetail">coappldetail</string>
    <string name="title_activity_car_compare">CarCompare</string>
    <string name="title_activity_tenure_new">TenureNew</string>
    <string name="step1">Step 1:Check \n Your Eligibility</string>
    <string name="step3">Step 3:Upload \n Documents</string>
    <string name="step2">Step 2:Create \n Loan Application</string>
    <string name="google_app_id">7a92cd35lq52sgie581fe9ki5lfgr9ui</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="fb_login_protocol_scheme">1799021007038264</string>
    <string name="title_activity_cibil_score">CibilScore</string>
    <string name="changemobno"> Or <u>change mobile number</u></string>
    <string name="title_activity_cibil__pay__history">Payment History</string>
    <string name="title_activity_credit_s__download">CreditS_Download</string>
</resources>