<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B71C1C"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="32dp"
    android:weightSum="1">

  <LinearLayout
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:background="#07ffffff"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="22dp">

        <com.gullakh.gullakhandroid.font.RobotoTextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/transparent_button_selector"
            android:text="Register"
            android:textColor="#ffffff"
            android:textSize="34sp"


            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.gullakh.gullakhandroid.font.MaterialDesignIconsTextView
                android:id="@+id/icon_friends1"
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_account"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="User nameTest"

                android:layout_weight="1"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.gullakh.gullakhandroid.font.MaterialDesignIconsTextView
                android:id="@+id/icon_friends2"
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_password"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:padding="10dp"

                android:layout_weight="1"
                android:hint="Password"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.gullakh.gullakhandroid.font.MaterialDesignIconsTextView
                android:id="@+id/icon_friends3"
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_email"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="E-mail"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.gullakh.gullakhandroid.font.MaterialDesignIconsTextView
                android:id="@+id/icon_friends4"
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_flag"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="Country"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.gullakh.gullakhandroid.font.MaterialDesignIconsTextView
                android:id="@+id/icon_friends"
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_city"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="City"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:gravity="right" >

            <com.gullakh.gullakhandroid.font.RobotoTextView
                android:id="@+id/registerb"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/transparent_button_selector"
                android:minWidth="96dp"
                android:text="REGISTER"
                android:textColor="@color/main_color_grey_700"
                 />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>